--- a/pages/login.gohtml
+++ b/pages/login.gohtml
@@ -25,7 +25,7 @@
                             </div>
 
                             <div class="mb-2">
-                                <input type="text" name="user" value="{{trd "user"}}" class="form-control">
+                                <input type="text" name="user" value="{{trd "user"}}" class="form-control" autofocus>
                             </div>
 
                             <div class="mb-2">
