--- a/pages/index.gohtml
+++ b/pages/index.gohtml
@@ -58,7 +58,7 @@
 		</div>
 
 		{{if eq .Format "table"}}
-			<table class="table table-sm table-bordered table-striped mb-3">
+			<table class="table table-sm table-bordered table-striped table-hover mb-3">
 				<thead>
 					<tr>
 						<th>Title</th>
