--- a/templates/e_footer.gohtml
+++ b/templates/e_footer.gohtml
@@ -8,6 +8,6 @@
 </div>
 </footer>
 
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js" integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.2/js/bootstrap.bundle.min.js" integrity="sha512-X/YkDZyjTf4wyc2Vy16YGCPHwAY8rZJY+POgokZjQB2mhIRFJCckEGc6YyX9eNsPfn0PzThEuNs+uaomE5CO6A==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-<script src="/static/main.js"></script>
+<script {{ asset "src" "/static/js/jquery.min.js" }}></script>
+<script {{ asset "src" "/static/js/bootstrap.min.js" }}></script>
+<script {{ asset "src" "/static/main.js" }}></script>
