--- a/pages/thingDetails.gohtml
+++ b/pages/thingDetails.gohtml
@@ -62,6 +62,10 @@
 						</td>
 					</tr>
 					<tr>
+						<td class="text-right">Read count</td>
+						<td>{{.Thing.ReadCount}}</td>
+					</tr>
+					<tr>
 						<td class="text-right">Pages</td>
 						<td>{{.Thing.Pages}}</td>
 					</tr>
