Order by read count

--- a/pages/index.gohtml
+++ b/pages/index.gohtml
@@ -153,6 +153,10 @@
 							</tr>
 							{{end}}
 							<tr>
+								<td class="text-right text-nowrap">Read count</td>
+								<td>{{.ReadCount}}</td>
+							</tr>
+							<tr>
 								<td class="text-right">Pages</td>
 								<td>{{.Pages}}</td>
 							</tr>
