--- a/pages/thingDetails.gohtml
+++ b/pages/thingDetails.gohtml
@@ -62,7 +62,7 @@
 						</td>
 					</tr>
 					<tr>
-						<td class="text-right">Read count</td>
+						<td class="text-right text-nowrap">Read count</td>
 						<td>{{.Thing.ReadCount}}</td>
 					</tr>
 					<tr>
