archiver lib update, random gallery

--- a/pages/index.gohtml
+++ b/pages/index.gohtml
@@ -28,7 +28,9 @@
 				</div>
 				<div class="card-footer p-2 d-flex flex-row justify-content-between">
 					<div>
-						<button class="btn btn-primary mr-2" type="submit">Filter</button></div>
+						<button class="btn btn-primary mr-2" type="submit">Filter</button>
+						<button class="btn btn-primary mr-2" name="random" value="1" type="submit">Random</button>
+					</div>
 					
 					<fieldset id="displayTypes">
 						<div class="btn-group">
