--- a/templates/e_header.gohtml
+++ b/templates/e_header.gohtml
@@ -2,10 +2,16 @@
 	<div class="navbar navbar-expand-lg fixed-top navbar-dark bg-primary">
 		<div class="container">
 			<a href="/" id="brandButton" class="navbar-brand">Sugoi</a>
-			<form id="logoutForm" action="/logout" method="POST">
-				<a href="/system" class="btn btn-info"><i class="fa-solid fa-cog"></i></a>
-				<button type="submit" class="btn btn-secondary">Logout</button>
-			</form>
+
+
+			<div class="d-flex flex-row align-items-center">
+				<small class="badge bg-info me-2" style="display: none" id="reindexStatus"></small>
+				<a href="/system" class="btn btn-info me-1"><i class="fa-solid fa-cog"></i></a>
+				
+				<form id="logoutForm" action="/logout" method="POST">
+					<button type="submit" class="btn btn-secondary">Logout</button>
+				</form>
+			</div>
 		</div>
 	</div>
 </header>
