--- a/pages/login.gohtml
+++ b/pages/login.gohtml
@@ -47,7 +47,7 @@
     </div>
     {{template "e_footer.gohtml" .}}
     <script>
-        $('#logoutForm').hide();
+        $('#userMenu').hide();
     </script>
 </body>
 
