--- a/pages/thingDetails.gohtml
+++ b/pages/thingDetails.gohtml
@@ -19,58 +19,8 @@
 					<div class="card-footer d-flex justify-content-center" id="ratingTarget"></div>
 				</div>
 			</div>
-			<div class="col-md-9 col-12 mb-3">
-				<h2 class="text-110">
-					{{.Thing.Title}}
-				</h2>
-				{{if .Thing.Collection}}
-				<p>
-					<a class="btn btn-sm btn-primary" href="{{.Thing.CollectionDetailsUrl}}">{{.Thing.Collection}}</a>
-				</p>
-				{{end}}
-
-				{{if .Thing.Description}}
-					<div class="card mb-3">
-						<div class="card-body">
-							{{.Thing.Description}}
-						</div>
-					</div>
-				{{end}}
-				
-				<table class="table table-sm table-bordered table-striped mb-3">
-					
-					{{ range $typeName, $type := .Thing.SortedTags }}
-					<tr>
-						<td class="text-right">
-							{{$typeName}}
-						</td>
-						<td>
-							{{ range $type }}
-							<a class="badge bg-primary text-decoration-none" href="{{.Url}}">{{.Label}}</a>
-							{{ end }}
-						</td>
-					</tr>
-					{{end}}
-					<tr>
-						<td class="text-right">Marks</td>
-						<td>
-							<div class="input-group input-group-sm">
-								<button class="btn btn-primary" type="button" id="subMark"><i class="fa-solid fa-minus"></i></button>
-								<span class="input-group-text border border-secondary bg-secondary text-white" id="marks">{{.Thing.Marks}}</span>
-								<button class="btn btn-primary" type="button" id="addMark"><i class="fa-solid fa-plus"></i></button>
-							</div>
-						</td>
-					</tr>
-					<tr>
-						<td class="text-right text-nowrap">Read count</td>
-						<td>{{.Thing.ReadCount}}</td>
-					</tr>
-					<tr>
-						<td class="text-right">Pages</td>
-						<td>{{.Thing.Pages}}</td>
-					</tr>
-				</table>
-
+			<div class="col-md-9 col-12 mb-3">					
+				{{.Thing.HtmlTable}}
 				<a class="btn btn-sm btn-secondary" href="{{.Thing.EditMetadataUrl}}?format=edit"><i class="fa-solid fa-edit"></i> Edit</a>
 				<a class="btn btn-sm btn-secondary" href="{{.Thing.SearchMetadataUrl}}"><i class="fa-solid fa-search"></i> Find metadata</a>
 			</div>
@@ -107,30 +57,6 @@
 				.fail(function () {
 					$ratingTarget.html('Error');
 				});
-
-			var $subMark = $('#subMark');
-			var $addMark = $('#addMark');
-			var $marks = $('#marks');
-
-			$addMark.click(function(e) {
-				e.preventDefault();
-				$marks.html('<i class="fa-solid fa-spinner fa-spin loader"></i>');
-
-				thingAddMark(hash)
-					.done(function (data) {
-						$marks.html(data.Marks);
-					});
-			});
-
-			$subMark.click(function(e) {
-				e.preventDefault();
-				$marks.html('<i class="fa-solid fa-spinner fa-spin loader"></i>');
-
-				thingSubMark(hash)
-					.done(function (data) {
-						$marks.html(data.Marks);
-					});
-			});
 		});
 	</script>
 </body>
