--- a/templates/e_header.gohtml
+++ b/templates/e_header.gohtml
@@ -1,10 +1,21 @@
 <header>
 	<div class="navbar navbar-expand-lg fixed-top navbar-dark bg-primary">
 		<div class="container">
-			<a href="/" id="brandButton" class="navbar-brand">Sugoi</a>
+			<a href="/" class="navbar-brand" id="brandButton">Sugoi</a>
 
+			
 			<div class="flex-row align-items-center" id="userMenu" style="display: flex">
 				<a href="/system?action=reindexStatus" class="badge bg-info text-decoration-none me-2" style="display: none" id="reindexStatus"></a>
+
+				<div class="dropdown">
+					<button id="historyButton" class="btn btn-info me-1" title="Search history" data-bs-toggle="dropdown" aria-expanded="false">
+						<i class="fa-solid fa-clock-rotate-left"></i>
+					</button>
+					<ul class="dropdown-menu dropdown-menu-end" id="historyMenu">
+						<li><a class="dropdown-item" href="#">Action</a></li>
+					</ul>
+				</div>
+
 				<a href="/system" class="btn btn-info me-1"><i class="fa-solid fa-cog"></i></a>
 				
 				<form action="/logout" method="POST">
